--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 
 
 # datasource config
-spring.datasource.url=jdbc:oracle:thin:@3.34.136.30:1521:xe
-spring.datasource.username=final_app
-spring.datasource.password=1q2w3e4r
+spring.datasource.url=jdbc:mysql://database-1.cwmsu3cjhaig.ap-northeast-2.rds.amazonaws.com:3306/app_twitter
+spring.datasource.username=Jongs
+spring.datasource.password=elxm153353
 
 
 # smtp config
